--- a/apps/app/Cargo.toml
+++ b/apps/app/Cargo.toml
@@ -42,6 +42,7 @@ paste         = { workspace = true }
 path-util     = { workspace = true }
 serde         = { workspace = true, features = ["derive"] }
 serde_json    = { workspace = true }
+serde_with    = { workspace = true }
 theseus       = { workspace = true, features = ["tauri"] }
 thiserror     = { workspace = true }
 tokio         = { workspace = true, features = ["time"] }
