--- a/.github/workflows/check-generic.yml
+++ b/.github/workflows/check-generic.yml
@@ -11,14 +11,11 @@ env:
 jobs:
   # less demanding jobs use 2vcpu runners
 
-  fmt:
-    runs-on: blacksmith-2vcpu-ubuntu-2404
+  typos:
+    runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
-      - uses: dtolnay/rust-toolchain@stable
-        with:
-          components: rustfmt
-      - run: cargo fmt --check
+      - uses: crate-ci/typos@master
 
   taplo:
     runs-on: blacksmith-2vcpu-ubuntu-2404
