--- a/Cargo.toml
+++ b/Cargo.toml
@@ -34,6 +34,7 @@ async-stripe = { version = "0.41.0", default-features = false, features = [
 async-trait = "0.1.88"
 async-tungstenite = { version = "0.30.0", default-features = false, features = ["futures-03-sink"] }
 async-walkdir = "2.1.0"
+const_format = "0.2.34"
 base64 = "0.22.1"
 bitflags = "2.9.1"
 bytemuck = "1.23.1"
