--- a/Cargo.toml
+++ b/Cargo.toml
@@ -132,6 +132,7 @@ sentry = { version = "0.42.0", default-features = false, features = [
 	"rustls",
 ] }
 sentry-actix = "0.42.0"
+const_format = "0.2.34"
 serde = "1.0.219"
 serde_bytes = "0.11.17"
 serde_cbor = "0.11.2"
