--- a/apps/labrinth/Cargo.toml
+++ b/apps/labrinth/Cargo.toml
@@ -62,6 +62,7 @@ bitflags.workspace = true
 hex.workspace = true
 zxcvbn.workspace = true
 totp-rs = { workspace = true, features = ["gen_secret"] }
+const_format.workspace = true
 
 url.workspace = true
 urlencoding.workspace = true
