--- a/apps/labrinth/.env.docker-compose
+++ b/apps/labrinth/.env.docker-compose
@@ -146,3 +146,4 @@ ARCHON_URL=none
 MURALPAY_API_URL=https://api.muralpay.com
 MURALPAY_API_KEY=none
 MURALPAY_TRANSFER_API_KEY=none
+MURALPAY_SOURCE_ACCOUNT_ID=none
