--- a/apps/labrinth/.env.local
+++ b/apps/labrinth/.env.local
@@ -147,3 +147,4 @@ ARCHON_URL=none
 MURALPAY_API_URL=https://api-staging.muralpay.com
 MURALPAY_API_KEY=none
 MURALPAY_TRANSFER_API_KEY=none
+MURALPAY_SOURCE_ACCOUNT_ID=none
