--- a/apps/labrinth/Cargo.toml
+++ b/apps/labrinth/Cargo.toml
@@ -42,6 +42,7 @@ rust-s3.workspace = true
 reqwest = { workspace = true, features = ["http2", "rustls-tls-webpki-roots", "json", "multipart"] }
 hyper-rustls.workspace = true
 hyper-util.workspace = true
+derive_more = { workspace = true, features = ["display", "error"] }
 
 serde = { workspace = true, features = ["derive"] }
 serde_json.workspace = true
