--- a/apps/docs/public/openapi.yaml
+++ b/apps/docs/public/openapi.yaml
@@ -3902,6 +3902,15 @@ paths:
         Make sure that the version format you use for your Modrinth releases is the same as the version format you use in your `mods.toml`.
         If you use a format such as `1.2.3-forge` or `1.2.3+1.19` with your Modrinth releases but your `mods.toml` only has `1.2.3`,
         the update checker may not function properly.
+
+        If you're using NeoForge, NeoForge versions will, by default, not appear in the default URL.
+        You will need to add `?neoforge=only` to show your NeoForge-only versions, or `?neoforge=include` for both.
+
+        ```toml
+        [[mods]]
+        # the other stuff here - ID, version, display name, etc.
+        updateJSONURL = "https://api.modrinth.com/updates/{slug|ID}/forge_updates.json?neoforge=only"
+        ```
       tags:
         - misc
       responses:
