--- a/.github/workflows/turbo-ci.yml
+++ b/.github/workflows/turbo-ci.yml
@@ -11,7 +11,7 @@ on:
 jobs:
   build:
     name: Lint and Test
-    runs-on: ubuntu-22.04
+    runs-on: ubuntu-latest
 
     env:
       # Ensure pnpm output is colored in GitHub Actions logs
