--- a/Cargo.toml
+++ b/Cargo.toml
@@ -240,6 +240,9 @@ wildcard_dependencies = "warn"
 [profile.dev.package.sqlx-macros]
 opt-level = 3
 
+[patch.crates-io]
+wry = { git = "https://github.com/modrinth/wry", rev = "f2ce0b0" }
+
 # Optimize for speed and reduce size on release builds
 [profile.release]
 opt-level = "s"  # Optimize for binary size
